feat: 전국 정수장 선택 기능 추가 (정수장 목록 전용 API 연동)
- KwaterFacilityApiClient: 정수장 목록 전용 API(fcltylist/codelist) 호출, XML 파싱
- FacilityService: KwaterFacilityApiClient로 교체, 24시간 캐시
- KwaterWaterQualityApiClient: fetchAllFacilities() 제거 (전용 API로 분리)
- FacilityInfo 모델 추가 (sujCode, facilityName, address)
- ApiController: /api/facilities, /api/waterQuality, /api/waterFlow, /api/analysis 전 엔드포인트 sujCode 파라미터 지원
- AnalysisService: sujCode 파라미터 기반 수질·유량 데이터 조인 분석
- 프론트엔드: 정수장 선택 드롭다운, 탭 UI, 수질·유량·AI 분석 카드, 스켈레톤 로딩
- Groq(Llama-3.3-70b) AI 분석 연동, 한글 전용 출력, 한자 금지 시스템 프롬프트
- RestTemplate 타임아웃 설정 (5s connect, 25s read)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>