@@ -9,9 +9,7 @@ import org.springframework.web.client.RestTemplate;
 
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 @Component
 public class KwaterWaterQualityApiClient {
@@ -23,18 +21,15 @@ public class KwaterWaterQualityApiClient {
 
     private final RestTemplate restTemplate;
     private final String apiKey;
-    private final String sujCode;
 
     public KwaterWaterQualityApiClient(RestTemplate restTemplate,
-                                       @Value("${kwater.api.key}") String apiKey,
-                                       @Value("${kwater.suj.code}") String sujCode) {
+                                       @Value("${kwater.api.key}") String apiKey) {
         this.restTemplate = restTemplate;
         this.apiKey = apiKey;
-        this.sujCode = sujCode;
     }
 
-    public List<WaterQualityRecord> fetchRecords() {
-        if (apiKey.equals("YOUR_API_KEY_HERE") || apiKey.isBlank()) {
+    public List<WaterQualityRecord> fetchRecords(String sujCode) {
+        if (apiKey.isBlank()) {
             log.warn("K-water API 키 미설정 — 수질 데이터 없음");
             return Collections.emptyList();
         }
@@ -53,12 +48,12 @@ public class KwaterWaterQualityApiClient {
                 + "&pageNo=1"
                 + "&numOfRows=100";
 
-            log.info("수질 API 호출: {}", url);
+            log.info("수질 API 호출: sujCode={}", sujCode);
 
             @SuppressWarnings("unchecked")
             Map<String, Object> response = restTemplate.getForObject(url, Map.class);
 
-            return parseResponse(response);
+            return parseRecords(response);
 
         } catch (Exception e) {
             log.error("K-water 수질 API 호출 실패: {}", e.getMessage());
@@ -67,86 +62,66 @@ public class KwaterWaterQualityApiClient {
     }
 
     @SuppressWarnings("unchecked")
-    private List<WaterQualityRecord> parseResponse(Map<String, Object> response) {
+    private List<Map<String, Object>> extractItems(Map<String, Object> response) {
         if (response == null) return Collections.emptyList();
-
         try {
             Object responseVal = response.get("response");
-            if (!(responseVal instanceof Map)) {
-                log.error("수질 API 에러 응답: {}", responseVal);
-                return Collections.emptyList();
-            }
+            if (!(responseVal instanceof Map)) return Collections.emptyList();
 
             Map<?, ?> responseMap = (Map<?, ?>) responseVal;
 
             Object header = responseMap.get("header");
             if (header instanceof Map<?, ?> h) {
-                String resultCode = String.valueOf(h.get("resultCode"));
-                if (!"00".equals(resultCode)) {
-                    log.error("수질 API 오류코드={} 메시지={}", resultCode, h.get("resultMsg"));
-                    return Collections.emptyList();
-                }
+                if (!"00".equals(String.valueOf(h.get("resultCode")))) return Collections.emptyList();
             }
 
             Map<String, Object> body = (Map<String, Object>) responseMap.get("body");
             if (body == null) return Collections.emptyList();
 
             Object itemsObj = body.get("items");
-            if (itemsObj == null || (itemsObj instanceof String s && s.isBlank())) {
-                log.info("수질 API 조회 결과 없음");
-                return Collections.emptyList();
-            }
+            if (itemsObj == null || (itemsObj instanceof String s && s.isBlank())) return Collections.emptyList();
 
-            // items = { item: [...] } 구조
             Map<String, Object> itemsMap = (Map<String, Object>) itemsObj;
             Object itemObj = itemsMap.get("item");
 
-            List<Map<String, Object>> items;
-            if (itemObj instanceof List<?> list) {
-                items = (List<Map<String, Object>>) list;
-            } else if (itemObj instanceof Map) {
-                items = List.of((Map<String, Object>) itemObj);
-            } else {
-                log.warn("수질 API item 구조 불명: {}", itemObj);
-                return Collections.emptyList();
-            }
-
-            log.info("수질 API 아이템 {}건 수신", items.size());
-
-            return items.stream()
-                .map(this::toRecord)
-                .filter(r -> r != null)
-                .toList();
+            if (itemObj instanceof List<?> list) return (List<Map<String, Object>>) list;
+            if (itemObj instanceof Map)           return List.of((Map<String, Object>) itemObj);
+            return Collections.emptyList();
 
         } catch (Exception e) {
-            log.error("수질 API 응답 파싱 실패: {}", e.getMessage());
+            log.error("정수장 목록 파싱 실패: {}", e.getMessage());
             return Collections.emptyList();
         }
     }
 
+    private List<WaterQualityRecord> parseRecords(Map<String, Object> response) {
+        List<Map<String, Object>> items = extractItems(response);
+        if (items.isEmpty()) {
+            log.info("수질 API 조회 결과 없음");
+            return Collections.emptyList();
+        }
+        log.info("수질 API 아이템 {}건 수신", items.size());
+        return items.stream().map(this::toRecord).filter(Objects::nonNull).toList();
+    }
+
     private WaterQualityRecord toRecord(Map<String, Object> item) {
         try {
-            String id           = str(item, "fcltyMngNo");
-            String facilityName = str(item, "fcltyMngNm");
-            String address      = str(item, "fcltyAddr");
-            String divName      = str(item, "liIndDivName");
-            String measuredAt   = formatDate(str(item, "occrrncDt"));
-            String phVal        = str(item, "phVal");
-            String phUnit       = str(item, "phUnit");
-            String tbVal        = str(item, "tbVal");
-            String tbUnit       = str(item, "tbUnit");
-            String clVal        = str(item, "clVal");
-            String clUnit       = str(item, "clUnit");
-
-            return new WaterQualityRecord(id, facilityName, address, divName, measuredAt,
-                                          phVal, phUnit, tbVal, tbUnit, clVal, clUnit);
+            return new WaterQualityRecord(
+                str(item, "fcltyMngNo"),
+                str(item, "fcltyMngNm"),
+                str(item, "fcltyAddr"),
+                str(item, "liIndDivName"),
+                formatDate(str(item, "occrrncDt")),
+                str(item, "phVal"),  str(item, "phUnit"),
+                str(item, "tbVal"),  str(item, "tbUnit"),
+                str(item, "clVal"),  str(item, "clUnit")
+            );
         } catch (Exception e) {
             log.warn("수질 항목 변환 실패: {}", item);
             return null;
         }
     }
 
-    // "2026052313" → "2026-05-23 13시"
     private String formatDate(String dt) {
         if (dt == null || dt.length() < 10) return dt;
         return dt.substring(0, 4) + "-" + dt.substring(4, 6) + "-"
